src/style/AppLayout.css
.trigger {
    font-size: 22px;
    line-height: 64px;
    padding: 0 24px;
    cursor: pointer;
    transition: color .3s;
    vertical-align: middle;
}

.trigger:hover {
    color: #1890ff;
}

.logo {
    margin: 16px;
    text-align: center;
    padding-bottom: 20px;
}

.layout-container {
    min-height: 100vh;
}

.sider-container {
    z-index: 10;
    background: #fff;
    height: 100vh;
    overflow: auto;
    position: fixed;
    left: 0;
    box-shadow: 1px 0 3px rgba(0, 21, 41, 0.35);
}

.sider-container .ant-menu-inline .ant-menu-item {
    font-size: 17px;
}

.sider-container .ant-menu-inline-collapsed>.ant-menu-item .anticon {
    font-size: 17px;
}

.header-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #fff;
    padding: 0;
    box-shadow: 0 1px 5px rgba(0, 21, 41, 0.35);
    /* border-bottom-style: solid;
    border-bottom-color: #1890ff;
    border-bottom-width: 3px; */
    z-index: 1;
}

.header-right {
    padding-right: 16px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.header-item {
    padding-left: 12px;
    padding-right: 12px;
    cursor: pointer;
}

.header-item:hover {
    background-color: #e6f7ff;
}

.ant-dropdown-menu-item .anticon {
    margin-right: 5px;
}

.header-notification-popover .ant-popover-inner-content {
    padding: 0;
}

.content-container {
    transition: all 0.2s;
}

.content-container .ant-divider-horizontal.ant-divider-with-text {
    font-size: 28px;
    color: #262626;
    margin-bottom: 24px;
}

.avatar-menu .anticon {
    margin-right: 8px;
}

/* Media Queries for tablets */

@media (max-width: 576px) {
    .ant-layout-sider {
        position: fixed;
    }
    .sider-container .ant-menu-inline .ant-menu-item {
        font-size: 24px;
    }
    .sider-container .ant-menu-inline-collapsed>.ant-menu-item .anticon {
        font-size: 24px;
    }
}

